--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+/* app.css */
+*{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Nav.js css */
+.nav{
+  width: 100%;
+  background-color: #000;
+  text-align: right;
+  padding: 20px;
+}
+.nav a{
+  color: #fff;
+  text-decoration: none;
+  margin-left: 40px;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* project.js css */
+.container{
+  width: 80%;
+  margin: 0 auto;
+  background-color: #efefef;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.itemList .item{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.itemList img{
+  width: 100%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.item .text, .item .img{
+  flex: 1;
+} 
